<resources>
    <string name="app_name">assignment1</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="title_activity_add_subscription">addSubscription</string>
    <string name="name">Name</string>
    <string name="date">Date (YYYY-DD-MM)</string>
    <string name="price">Price $</string>
    <string name="comments">Comments (Max 30 Characters)</string>
    <string name="submit">Submit</string>
</resources>
